Update & refactor the lib & many misc.